kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cargovera-api
spec:
  type: LoadBalancer
  selector:
    app: cargovera-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
